# ForwardKinematics

./: CMakeLists.txt
matlab/: test.m  test.m~
src/: ForwardKinematics.cpp  ForwardKinematics.h
src/Utility/: dmotion_math.hpp
test/: ForKin_test.cpp
